# Teto-SDL-ffmpeg-desktop-mate

./: CMakeLists.txt
src/: main.cpp
